@@ -1,3 +1,6 @@
+2009-06-18 Alexander Malysh <amalysh at kannel.org>
+    * gwlib/http.c: removed max http server limit.
+
 2009-06-16 Alexander Malysh <amalysh at kannel.org>
     * gwlib/http.c: increase max http servers from 32 to 100 and return error
       if max servers reached.
